--- a/tables.html
+++ b/tables.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootsrtap Free Admin Template - SIMINTA | Admin Dashboad Template</title>
+    <title>ZoomThru | Admin Dashboad </title>
     <!-- Core CSS - Include with every page -->
     <link href="assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -47,36 +47,36 @@
                         <li>
                             <a href="#">
                                 <div>
-                                    <strong><span class=" label label-danger">Andrew Smith</span></strong>
+                                    <strong><span class=" label label-danger">Dan Eric</span></strong>
                                     <span class="pull-right text-muted">
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>ZoomThu Parking, garage 3 is full.</div>
                             </a>
                         </li>
                         <li class="divider"></li>
                         <li>
                             <a href="#">
                                 <div>
-                                    <strong><span class=" label label-info">Jonney Depp</span></strong>
+                                    <strong><span class=" label label-info">Richard Malone</span></strong>
                                     <span class="pull-right text-muted">
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Revenue Update.</div>
                             </a>
                         </li>
                         <li class="divider"></li>
                         <li>
                             <a href="#">
                                 <div>
-                                    <strong><span class=" label label-success">Jonney Depp</span></strong>
+                                    <strong><span class=" label label-success">Lexi Sprague</span></strong>
                                     <span class="pull-right text-muted">
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Check out the latest data on our Valet...</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -294,10 +294,10 @@
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i>Charts<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="flot.html">Flot Charts</a>
+                                <a href="flot.html">Occupancy</a>
                             </li>
                             <li>
-                                <a href="morris.html">Morris Charts</a>
+                                <a href="morris.html">Revenue</a>
                             </li>
                         </ul>
                         <!-- second-level-items -->
