--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootsrtap Free Admin Template - SIMINTA | Admin Dashboad Template</title>
+    <title>ZoomThru | Admin Dashboad</title>
     <!-- Core CSS - Include with every page -->
     <link href="assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -48,7 +48,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Can you finish the notes tomorrow morning so I can hook into them and get you a proposal written?</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -60,7 +60,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Also, projected costs for the servers over 3 years. Richard wants them so he can put them in the financials..</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -72,7 +72,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>There will be a ton of transactions.</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -202,7 +202,7 @@
                         <li>
                             <a href="#">
                                 <div>
-                                    <i class="fa fa-tasks fa-fw"></i>New Task
+                                    <i class="fa fa-tasks fa-fw"></i>Revenue
                                     <span class="pull-right text-muted small">4 minutes ago</span>
                                 </div>
                             </a>
@@ -211,7 +211,7 @@
                         <li>
                             <a href="#">
                                 <div>
-                                    <i class="fa fa-upload fa-fw"></i>Server Rebooted
+                                    <i class="fa fa-upload fa-fw"></i>Occupancy Zone 1
                                     <span class="pull-right text-muted small">4 minutes ago</span>
                                 </div>
                             </a>
@@ -290,10 +290,10 @@
                         <a href="#"><i class="fa fa-bar-chart-o fa-fw"></i> Charts<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
-                                <a href="flot.html">Flot Charts</a>
+                                <a href="flot.html">Valet Charts</a>
                             </li>
                             <li>
-                                <a href="morris.html">Morris Charts</a>
+                                <a href="morris.html">Tranactions Charts</a>
                             </li>
                         </ul>
                         <!-- second-level-items -->
@@ -311,7 +311,7 @@
                         <!-- second-level-items -->
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-files-o fa-fw"></i>Sample Pages<span class="fa arrow"></span></a>
+                        <a href="#"><i class="fa fa-files-o fa-fw"></i>Revenue Zone 2<span class="fa arrow"></span></a>
                         <ul class="nav nav-second-level">
                             <li>
                                 <a href="blank.html">Blank Page</a>
@@ -343,8 +343,8 @@
                 <!-- Welcome -->
                 <div class="col-lg-12">
                     <div class="alert alert-info">
-                        <i class="fa fa-folder-open"></i><b>&nbsp;Hello ! </b>Welcome Back <b>Jonny Deen </b>
- <i class="fa  fa-pencil"></i><b>&nbsp;2,000 </b>Support Tickets Pending to Answere. nbsp;
+                        <i class="fa fa-folder-open"></i><b>&nbsp;Hello ! </b>Welcome Back <b>Lexi Sprague </b>
+ <i class="fa  fa-pencil"></i><b>&nbsp;2,000 </b>New customers. nbsp;
                     </div>
                 </div>
                 <!--end  Welcome -->
@@ -355,7 +355,7 @@
                 <!--quick info section -->
                 <div class="col-lg-3">
                     <div class="alert alert-danger text-center">
-                        <i class="fa fa-calendar fa-3x"></i>&nbsp;<b>20 </b>Meetings Sheduled This Month
+                        <i class="fa fa-calendar fa-3x"></i>&nbsp;<b>20 </b>New revenue
 
                     </div>
                 </div>
@@ -366,7 +366,7 @@
                 </div>
                 <div class="col-lg-3">
                     <div class="alert alert-info text-center">
-                        <i class="fa fa-rss fa-3x"></i>&nbsp;<b>1,900</b> New Subscribers This Year
+                        <i class="fa fa-rss fa-3x"></i>&nbsp;<b>1,900</b> New Customers This Year
 
                     </div>
                 </div>
@@ -507,7 +507,7 @@
                             <h3>20,741 </h3>
                         </div>
                         <div class="panel-footer">
-                            <span class="panel-eyecandy-title">Daily User Visits
+                            <span class="panel-eyecandy-title">Daily Customer Visits
                             </span>
                         </div>
                     </div>
@@ -517,7 +517,7 @@
                             <h3>2,060 </h3>
                         </div>
                         <div class="panel-footer">
-                            <span class="panel-eyecandy-title">Pending Orders Found
+                            <span class="panel-eyecandy-title">Pending Transactions
                             </span>
                         </div>
                     </div>
@@ -537,7 +537,7 @@
                             <h3>2,700 </h3>
                         </div>
                         <div class="panel-footer">
-                            <span class="panel-eyecandy-title">New User Registered
+                            <span class="panel-eyecandy-title">New Customer Registered
                             </span>
                         </div>
                     </div>
@@ -563,42 +563,42 @@
                         <div class="panel-body">
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i>New Comment
+                                    <i class="fa fa-comment fa-fw"></i>New Transaction
                                     <span class="pull-right text-muted small"><em>4 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i>3 New Followers
+                                    <i class="fa fa-twitter fa-fw"></i>3 New Customer
                                     <span class="pull-right text-muted small"><em>12 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-envelope fa-fw"></i>Message Sent
+                                    <i class="fa fa-envelope fa-fw"></i>New revenue
                                     <span class="pull-right text-muted small"><em>27 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-tasks fa-fw"></i>New Task
+                                    <i class="fa fa-tasks fa-fw"></i>New spots opened
                                     <span class="pull-right text-muted small"><em>43 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-upload fa-fw"></i>Server Rebooted
+                                    <i class="fa fa-upload fa-fw"></i>Tranaction update
                                     <span class="pull-right text-muted small"><em>11:32 AM</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-bolt fa-fw"></i>Server Crashed!
+                                    <i class="fa fa-bolt fa-fw"></i>Payment batch processed
                                     <span class="pull-right text-muted small"><em>11:13 AM</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-warning fa-fw"></i>Server Not Responding
+                                    <i class="fa fa-warning fa-fw"></i>New report
                                     <span class="pull-right text-muted small"><em>10:57 AM</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-shopping-cart fa-fw"></i>New Order Placed
+                                    <i class="fa fa-shopping-cart fa-fw"></i>Enforcement update
                                     <span class="pull-right text-muted small"><em>9:49 AM</em>
                                     </span>
                                 </a>
@@ -615,7 +615,7 @@
                     <!-- Donut Example-->
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <i class="fa fa-bar-chart-o fa-fw"></i>Donut Chart Example
+                            <i class="fa fa-bar-chart-o fa-fw"></i>New Revenue 
                         </div>
                         <div class="panel-body">
                             <div id="morris-donut-chart"></div>
