--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ZoomThru | Admin Dashboad</title>
+    <title>ZoomThru | Admin Dashboad </title>
     <!-- Core CSS - Include with every page -->
     <link href="assets/plugins/bootstrap/bootstrap.css" rel="stylesheet" />
     <link href="assets/font-awesome/css/font-awesome.css" rel="stylesheet" />
@@ -344,7 +344,7 @@
                 <div class="col-lg-12">
                     <div class="alert alert-info">
                         <i class="fa fa-folder-open"></i><b>&nbsp;Hello ! </b>Welcome Back <b>Lexi Sprague </b>
- <i class="fa  fa-pencil"></i><b>&nbsp;2,000 </b>New customers. nbsp;
+ <i class="fa  fa-pencil"></i><b>&nbsp;2,000 </b>New customers.
                     </div>
                 </div>
                 <!--end  Welcome -->
